<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">iCinema</string>
    <string name="bnav_movie">Movie</string>
    <string name="bnav_tvshows">TV Shows</string>
    <string name="bnav_favorite">Favorite</string>
    <string name="bnav_search">Search</string>
    <string name="bnav_settings">Settings</string>
    <string name="myprogressview_loading_message">Loading</string>
    <string name="myprogressview_tryagain">Try Again</string>
    <string name="popular">Popular</string>
    <string name="release_date">Release Date</string>
    <string name="revenue">Revenue</string>
    <string name="tagline">Tagline</string>
    <string name="overview">Overview</string>
    <string name="vote_count">Vote Count</string>
    <string name="popularity">%1$s popularity</string>
    <string name="movie_favorite_added_msg">Movie has been added to Favorite</string>
    <string name="movie_favorite_removed_msg">Movie has been removed from Favorite</string>
    <string name="tvshow_favorite_added_msg">Tv Show has been added to Favorite</string>
    <string name="tvshow_favorite_removed_msg">Tv Show has been removed from Favorite</string>
    <string name="no_favorite">There is no favorite yet!</string>
    <string name="double_back_to_exit">Press once again to exit the apps</string>
    <string name="movies">Movies</string>
    <string name="tv_shows">Tv Shows</string>
    <string name="first_air_date">First Air Date</string>
    <string name="number_of_seasons">Number of Seasons</string>
    <string name="status">Status</string>
    <string name="title_setting">Setting</string>
    <string name="release_reminder">Release Reminder</string>
    <string name="release_reminder_desc">Reminder showing the movie that released today</string>
    <string name="daily_reminder">Daily Reminder</string>
    <string name="daily_reminder_desc">Reminder to return to app</string>
    <string name="reminder">Reminder</string>
    <string name="other">Other</string>
    <string name="language">Language</string>
    <string name="error_exception">Something wrong with your code</string>
    <string name="alarm_daily_activated">Daily reminder activated</string>
    <string name="alarm_release_activated">New Release reminder activated</string>
    <string name="alarm_daily_deactivated">Daily Reminder deactivated</string>
    <string name="alarm_release_deactivated">New Release reminder deactivated</string>
    <string name="alarm_daily_reminder_title">Daily Reminder</string>
    <string name="alarm_daily_reminder_label">Start your day by checking the popular movies or tv shows!</string>
    <string name="alarm_release_reminder_title">Release Reminder</string>
    <string name="alarm_release_reminder_label">New movie release! Check it out.</string>
</resources>
