<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/bnav_movie"
        android:icon="@drawable/ic_movie"
        android:title="@string/bnav_movie"
        app:showAsAction="always" />

    <item
        android:id="@+id/bnav_tvshow"
        android:icon="@drawable/ic_tvshow"
        android:title="@string/bnav_tvshows"
        app:showAsAction="always" />

    <item
        android:id="@+id/bnav_search"
        android:icon="@drawable/ic_search"
        android:title="@string/bnav_search"
        app:showAsAction="always" />

    <item
        android:id="@+id/bnav_favorite"
        android:icon="@drawable/ic_favorite"
        android:title="@string/bnav_favorite"
        app:showAsAction="always" />

    <item
        android:id="@+id/bnav_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/bnav_settings"
        app:showAsAction="always" />

</menu>